crates/shiplog-render-md/tests/snapshots/format_stability__packet_all_event_types.snap
---
source: crates/shiplog-render-md/tests/format_stability.rs
expression: result
---
# Summary

**Window:** 2025-Q1

**Workstreams:** 1

**Events:** 1 PR, 1 review, 1 manual event

**Coverage:** Complete

**Sources:** GitHub

## Executive Summary

- **Widgets Core** — 1 PR, 1 review, 1 manual event

## Workstreams

### Widgets Core

Core widget development and incident response

**Evidence anchors**

- [PR] Implement feature X (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/42)
- [Review] approved (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/42)
- [🚨] Production outage resolution (2025-06-01)

**Suggested claim prompts**

- What changed for users, operators, or maintainers?
- Which risk, delay, or repeated work did this reduce?
- Which evidence anchor best proves the change?
- What follow-up or gap should a reviewer know about?

_PRs: 1, Reviews: 1, Manual: 1_

## Receipts

### Workstream: Widgets Core

- [PR] Implement feature X (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/42)
- [Review] approved (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/42)
- [🚨] Production outage resolution (2025-06-01)

## Coverage and Limits

Included:
- GitHub: 2 events
- Manual: 1 event
- Fetched events: not reported by query slices

Skipped:
- None recorded

Known gaps:
- Manual events are user-provided

Details:
- **Date window:** 2025-01-01 to 2025-04-01
- **Mode:** merged
- **Sources:** GitHub
- **Completeness:** Complete

## Appendix: All Receipts

### Widgets Core

- [PR] Implement feature X (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/42)
- [Review] approved (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/42)
- [🚨] Production outage resolution (2025-06-01)

---

## File Artifacts

- `packet.md` (this review packet)
- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.suggested.yaml` (auto-generated workstream suggestions)
- `workstreams.yaml` (curated workstreams, created after edits)
- `bundle.manifest.json` (artifact manifest and checksums)
