crates/shiplog-render-md/tests/snapshots/format_stability__packet_coverage_first_ordering.snap
---
source: crates/shiplog-render-md/tests/format_stability.rs
expression: result
---
## Coverage and Limits

Included:
- Sources: github
- Fetched events: not reported by query slices

Known gaps:
- None recorded

Details:
- **Date window:** 2025-01-01 to 2025-04-01
- **Mode:** merged
- **Sources:** github
- **Completeness:** Complete

# Summary

**Window:** 2025-Q1

**Workstreams:** 1

**Events:** 1 PRs, 0 reviews, 0 manual

**Coverage:** Complete

**Sources:** github

## Workstreams

### Initial Work

**Evidence anchors**

- [PR] Initial commit (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/1)

**Suggested claim prompts**

- What changed for users, operators, or maintainers?
- Which risk, delay, or repeated work did this reduce?
- Which evidence anchor best proves the change?
- What follow-up or gap should a reviewer know about?

_PRs: 1, Reviews: 0, Manual: 0_

## Receipts

### Workstream: Initial Work

- [PR] Initial commit (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/1)

## Appendix: All Receipts

### Initial Work

- [PR] Initial commit (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/1)

---

## File Artifacts

- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.yaml` (editable clustering)
- `manual_events.yaml` (non-GitHub work)
