crates/shiplog-render-md/tests/snapshots/format_stability__packet_empty.snap
---
source: crates/shiplog-render-md/tests/format_stability.rs
assertion_line: 358
expression: result
---
# Summary

**Window:** 2025-Q1

**Workstreams:** 0

**Events:** 0 PRs, 0 reviews, 0 manual events

**Coverage:** Complete

**Sources:** GitHub

## Workstreams

_No workstreams found_

## Receipts

_No workstreams, no receipts_

## Coverage and Limits

Included:
- GitHub: 0 events
- Fetched events: not reported by query slices

Skipped:
- None recorded

Known gaps:
- None recorded

Details:
- **Date window:** 2025-01-01 to 2025-04-01
- **Mode:** merged
- **Sources:** GitHub
- **Completeness:** Complete

## Appendix: All Receipts

## File Artifacts

- `packet.md` (this review packet)
- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.suggested.yaml` (auto-generated workstream suggestions)
- `workstreams.yaml` (curated workstreams, created after edits)
- `bundle.manifest.json` (artifact manifest and checksums)
