crates/shiplog-render-md/tests/snapshots/format_stability__packet_partial_coverage.snap
---
source: crates/shiplog-render-md/tests/format_stability.rs
expression: result
---
# Summary

**Window:** 2025-Q1

**Workstreams:** 1

**Events:** 1 PRs, 0 reviews, 0 manual

**Coverage:** Partial

**Sources:** github

**Warnings:**
  - ⚠️ API rate limit hit during ingestion
  - ⚠️ Some repositories may be missing

## Workstreams

### Partial Work

**Evidence anchors**

- [PR] Some work (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/1)

**Suggested claim prompts**

- What changed for users, operators, or maintainers?
- Which risk, delay, or repeated work did this reduce?
- Which evidence anchor best proves the change?
- What follow-up or gap should a reviewer know about?

_PRs: 1, Reviews: 0, Manual: 0_

## Receipts

### Workstream: Partial Work

- [PR] Some work (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/1)

## Coverage and Limits

Included:
- GitHub: 1 event
- Query slices: 2 slices, fetched 130 of 230 reported results

Skipped:
- None recorded

Known gaps:
- Overall completeness is Partial
- API rate limit hit during ingestion
- Some repositories may be missing
- 1 query slice reported incomplete results
- 1 query slice fetched fewer results than reported

Details:
- **Date window:** 2025-01-01 to 2025-04-01
- **Mode:** merged
- **Sources:** github
- **Completeness:** Partial
- **Query slices:** 2
  - ⚠️ 1 slices had incomplete results
  - **Slicing applied (API caps):**
    - is:pr author:octocat merged:2025-01-01..2025-02-01: fetched 100/200 (50%)

## Appendix: All Receipts

### Partial Work

- [PR] Some work (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/1)

---

## File Artifacts

- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.yaml` (editable clustering)
- `manual_events.yaml` (non-GitHub work)
